[gd_scene load_steps=8 format=3 uid="uid://f85s2avde6r4"]

[ext_resource type="Script" path="res://src/scenes/lobby/lobby.gd" id="1"]
[ext_resource type="Script" path="res://src/scenes/lobby/lobby_main.gd" id="1_1dxwt"]
[ext_resource type="Texture2D" uid="uid://ck0xhgbwso61b" path="res://assets/menu/menu_background.jpg" id="1_h4ob2"]
[ext_resource type="Texture2D" uid="uid://cuwm16ugkpddi" path="res://assets/menu/logo.png" id="3_m8k8n"]
[ext_resource type="Texture2D" uid="uid://1ucfk21hr17g" path="res://assets/menu/start.png" id="4_6wbdp"]
[ext_resource type="AudioStream" uid="uid://07bqq1qn4mif" path="res://assets/music/MainMenu_Level2.mp3" id="6_umskd"]
[ext_resource type="AudioStream" uid="uid://cb353ymvemjao" path="res://assets/sfx/ComeBaark.mp3" id="7_x2ygk"]

[node name="Lobby" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -320.0
offset_top = -200.0
offset_right = 320.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 2
size_flags_vertical = 2
script = ExtResource("1_1dxwt")

[node name="background" type="Sprite2D" parent="."]
position = Vector2(320, 198)
scale = Vector2(0.885185, 0.744444)
texture = ExtResource("1_h4ob2")

[node name="LobbyPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = 201.0
offset_right = 120.0
offset_bottom = 347.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 2
size_flags_vertical = 2
script = ExtResource("1")

[node name="StatusLabel" type="Label" parent="LobbyPanel"]
layout_mode = 0
offset_left = 10.0
offset_top = 6.0
offset_right = 77.0
offset_bottom = 29.0
size_flags_horizontal = 2
size_flags_vertical = 0
text = "Server IP:"

[node name="Address" type="LineEdit" parent="LobbyPanel"]
layout_mode = 0
offset_left = 10.0
offset_top = 37.0
offset_right = 210.0
offset_bottom = 68.0
size_flags_horizontal = 2
size_flags_vertical = 2
text = "188.245.152.157"

[node name="OnlineButton" type="Button" parent="LobbyPanel"]
layout_mode = 0
offset_left = 113.0
offset_top = 78.0
offset_right = 193.0
offset_bottom = 109.0
size_flags_horizontal = 2
size_flags_vertical = 2
text = "Online"

[node name="StatusOk" type="Label" parent="LobbyPanel"]
layout_mode = 0
offset_left = 10.0
offset_top = 114.0
offset_right = 210.0
offset_bottom = 137.0
size_flags_horizontal = 2
size_flags_vertical = 0
horizontal_alignment = 1

[node name="StatusFail" type="Label" parent="LobbyPanel"]
modulate = Color(1, 0.427451, 0.345098, 1)
layout_mode = 0
offset_left = 10.0
offset_top = 114.0
offset_right = 210.0
offset_bottom = 137.0
size_flags_horizontal = 2
size_flags_vertical = 0
horizontal_alignment = 1

[node name="LocalButton" type="Button" parent="LobbyPanel"]
layout_mode = 0
offset_left = 23.0
offset_top = 77.0
offset_right = 103.0
offset_bottom = 108.0
size_flags_horizontal = 2
size_flags_vertical = 2
text = "Local"

[node name="MusicPlayer" type="AudioStreamPlayer" parent="LobbyPanel"]
stream = ExtResource("6_umskd")
autoplay = true
parameters/looping = false

[node name="GameNamePlayer" type="AudioStreamPlayer" parent="LobbyPanel"]
stream = ExtResource("7_x2ygk")

[node name="logo" type="Sprite2D" parent="."]
position = Vector2(340, -42)
scale = Vector2(0.6, 0.6)
texture = ExtResource("3_m8k8n")

[node name="TextureButton" type="TextureButton" parent="."]
visible = false
layout_mode = 0
offset_left = -169.0
offset_top = 223.0
offset_right = 1331.0
offset_bottom = 1045.0
scale = Vector2(0.7, 0.7)
texture_normal = ExtResource("4_6wbdp")
stretch_mode = 0

[node name="GameNamePlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_x2ygk")

[connection signal="pressed" from="LobbyPanel/OnlineButton" to="LobbyPanel" method="_on_join_pressed"]
[connection signal="pressed" from="LobbyPanel/LocalButton" to="LobbyPanel" method="_on_local_join_pressed"]
[connection signal="pressed" from="TextureButton" to="." method="_on_texture_button_pressed"]
